# push_swap

./: CMakeLists.txt  Makefile  README.md  check_arg.c  check_number_space.c  checker.c  command.c  command_1.c  command_2.c  diff_num.c  func_t_stack.c  func_t_swap.c  operations.c  position.c  print_swap.c  push_swap.c  push_swap.h  ser_num.c  solve.c  solve_2.c  solve_bubbly.c  validation_check.c
ft_printf/: Makefile  ft_flist_fun.c  ft_printf.c  ft_printf.h  ft_read_double.c  ft_read_l_double.c  param_size.c  rounding.c
ft_printf/libft/: arr_numdup.c  check_number.c  ft_ll_atoi.c  ft_strjoin_free.c  ft_strsplit.c  ft_utoa_base.c  get_next_line.c  get_next_line.h  get_next_line.h.gch  libft.h  libft.h.gch  num_delim.c  reverse_arr_num.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
test/: start.sh
